src/rules/count_of/snapshots/tests__deserialize_count_of_all.snap
---
created: "2019-02-27T18:19:43.102060Z"
creator: insta@0.6.3
source: src/rules/count_of/tests.rs
expression: actual
---
Rule {
    count: All,
    of: []
}
