src/rules/count_of/snapshots/tests__deserialize_count_of_any.snap
---
created: "2019-02-27T18:19:43.102078Z"
creator: insta@0.6.3
source: src/rules/count_of/tests.rs
expression: actual
---
Rule {
    count: Any,
    of: []
}
