src/rules/count_of/snapshots/tests__serialize_count_of_all.snap
---
created: "2019-02-27T18:19:43.102135Z"
creator: insta@0.6.3
source: src/rules/count_of/tests.rs
expression: data
---
count: all
of: []
